# velocem

./: .clang-format  .gitignore  CMakeLists.txt  Contributors  ReadMe.md  UsageLicense  pyproject.toml  vcpkg.json
.github/workflows/: main.yaml  publish.yaml  test.yaml
iwyu/: GetIWYUMapGen.cmake
src/: Balm.hpp  CMakeLists.txt  Constants.hpp  HTTPParser.cpp  HTTPParser.hpp  Intellisense.h  ModVelocem.c  ModVelocem.cpp  PythonInternal.h  Request.cpp  Request.hpp  Router.hpp  Server.c  Util.cpp  Util.hpp  Velocem.h  WSGI.cpp  WSGI.hpp  WSGIApp.cpp  WSGIApp.hpp  WSGIServer.cpp  WSGIServer.hpp  constants.c  constants.h  test2.c  util.cpp  util.h
src/GILBalm/: Balm.c  Balm.h  CMakeLists.txt  balm_threads.h
src/Platform/: CMakeLists.txt
src/defs/: http_method.def
src/plat/: CMakeLists.txt  generic.cpp  linux.cpp  macos.cpp  plat.hpp  windows.cpp
src/util/: BalmStringView.hpp  CMakeLists.txt  Constants.cpp  Constants.hpp  Util.cpp  Util.hpp
src/util/defs/: http_method.def
src/wsgi/: App.cpp  App.hpp  CMakeLists.txt  Input.cpp  Input.hpp  Request.cpp  Request.hpp  Server.cpp  Server.hpp
test/: test_velocem.py  test_wsgi.py
test/apps/: wsgi.py  wsgi_echo.py
test/util/: util.py
vcpkg/: BootstrapVcpkg.cmake
vcpkg/triplets/: arm64-macos-release-lto.cmake  x64-linux-release-lto.cmake  x64-windows-release-lto.cmake
