[project]
name = "velocem"
version = "0.0.3"
description = "Hyperspeed Python Web Framework"
readme = "ReadMe.md"
requires-python = ">=3.12"
license = { "file" = "UsageLicense" }
authors = [{ "name" = "Vito Gamberini", "email" = "vito@gamberini.email" }]
keywords = ["WSGI"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: zlib/libpng License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
urls = { "Documentation" = "https://github.com/nickelpro/velocem" }
dependencies = []

[build-system]
requires = ["py-build-cmake~=0.2.0a9"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
generated = "module"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "vcpkg.json", "src/*"]

[tool.py-build-cmake.cmake]
minimum_version = "3.17"
build_type = "Release"
build_args = ["-j"]

[tool.py-build-cmake.windows.cmake]
args = ["-T", "ClangCL"]

[tool.py-build-cmake.windows.cmake.options]
"VCPKG_TARGET_TRIPLET:STRING" = "x64-windows-static"
"CMAKE_MSVC_RUNTIME_LIBRARY:STRING" = "MultiThreaded"
