[project]
name = "velocem"
version = "0.0.8"
description = "Hyperspeed Python Web Framework"
readme = "ReadMe.md"
requires-python = ">=3.12"
license = { "file" = "UsageLicense" }
authors = [{ "name" = "Vito Gamberini", "email" = "vito@gamberini.email" }]
keywords = ["WSGI"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
urls = { "Documentation" = "https://github.com/nickelpro/velocem" }
dependencies = []

[build-system]
requires = ["py-build-cmake~=0.2.0a14"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
generated = "module"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "vcpkg.json", "cmake", "src"]

[tool.py-build-cmake.cmake]
minimum_version = "3.17"
config = "Release"
build_type = "Release"
build_args = ["-j"]

[tool.py-build-cmake.linux.cmake.options]
"VELOCEM_USE_IO_URING:BOOL" = "ON"
"VCPKG_MANIFEST_FEATURES:STRING" = "vcpkg-uring"

[tool.py-build-cmake.mac.cmake.options]
"CMAKE_OSX_DEPLOYMENT_TARGET:STRING" = "13.3"

[tool.py-build-cmake.windows.cmake.options]
"VCPKG_TARGET_TRIPLET:STRING" = "x64-windows-static"
"CMAKE_MSVC_RUNTIME_LIBRARY:STRING" = "MultiThreaded"
