[project]
name = "velocem"
version = "0.0.13"
description = "Hyperspeed Python Web Framework"
readme = "ReadMe.md"
requires-python = ">=3.13"
license = { "file" = "UsageLicense" }
authors = [{ "name" = "Vito Gamberini", "email" = "vito@gamberini.email" }]
keywords = ["WSGI"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
urls = { "Documentation" = "https://github.com/nickelpro/velocem" }
dependencies = []

[dependency-groups]
test = ["pytest", "nanoroute"]

[build-system]
requires = ["py-build-cmake~=0.4.0"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
generated = "module"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "vcpkg.json", "src", "vcpkg"]

[tool.py-build-cmake.cmake]
minimum_version = "3.25"
build_type = "Release"
generator = "Ninja"

[tool.py-build-cmake.linux.cmake.options]
"VCPKG_TARGET_TRIPLET:STRING" = "x64-linux-release-lto"
"VCPKG_MANIFEST_FEATURES:STRING" = "vcpkg-uring"
"VELOCEM_USE_IO_URING:BOOL" = "ON"

[tool.py-build-cmake.mac.cmake.options]
"VCPKG_TARGET_TRIPLET:STRING" = "arm64-macos-release-lto"

[tool.py-build-cmake.windows.cmake.options]
"VCPKG_TARGET_TRIPLET:STRING" = "x64-windows-release-lto"
"CMAKE_MSVC_RUNTIME_LIBRARY:STRING" = "MultiThreaded"
